fix desktop backgorund and spacing

--- a/Tovik/Shared/MainLayout.razor.scss
+++ b/Tovik/Shared/MainLayout.razor.scss
@@ -158,7 +158,7 @@ main {
 
         ::deep .nav-sidebar {
             grid-column: 1 / span 1;
-            margin-top: 100px;
+            margin-top: 44px;
             z-index: 10;
         }
 
@@ -177,21 +177,21 @@ main {
                 width: 100%;
                 display: block;
             }
-
             .hero-img {
                 display: none;
             }
 
             .hero-background {
-                width: 100vw;
-                top: -300px;
-                left: -40%;
+                width: 110vw;
+                top: -38vh;
+                left: -38vw;
                 transform: none;
                 opacity: 0.6;
             }
 
             ::deep article {
                 width: 100%;
+                margin-top: 144px;
 
                 .page-container {
                     max-width: none;
